clang/test/BSC/Negative/NullabilityCheck/nested_owned_struct/nested_owned_struct.cbs
// RUN: %clang_cc1 -nullability-check=all -verify %s

_Safe T *_Owned safe_malloc<T>(T t);
_Safe void safe_free(void *_Owned p);

_Owned struct B{
    _Public:
    int * _Owned p;
    ~B(B this){
        safe_free((void*_Owned)this.p);
    }
};

_Owned struct A{
    _Public:
    B b;
};

int main(){
    B b1={};// expected-error {{type contains nonnull pointer must be properly initialized}}
    return 0;
}



